--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,2 +1,6 @@
-compatibility_date = "2024-07-01"
-pages_build_output_dir = "./output"
+name = "cms-omny-ca"
+compatibility_date = "2024-09-25"
+
+[assets]
+directory = "./output"
+not_found_handling = "single-page-application"
