--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,4 +52,4 @@ jobs:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           wranglerVersion: 4.26.0
-          command: versions upload --preview-alias ${{ github.head_ref }}
+          command: versions upload --preview-alias ${{ github.head_ref || github.ref_name }}
